# cc-hub

./: .gitignore  Cargo.toml  GROOMING.md  README.md
docs/: codebase-tour.md
lib/: Cargo.toml
lib/src/: acks.rs  agent.rs  app.rs  auto_review.rs  clipboard.rs  config.rs  conversation.rs  folder_picker.rs  gh.rs  lib.rs  live_view.rs  merge_lock.rs  metrics.rs  models.rs  orchestrator.rs  pi_bridge.rs  pi_conversation.rs  pi_scanner.rs  pr.rs  projects_scan.rs  reservations.rs  scanner.rs  send.rs  spawn.rs  title.rs  tmux_pane.rs  tool_use_count.rs  triage.rs  ui.rs  usage.rs  version.rs  watcher.rs
lib/src/platform/: mod.rs  mux.rs  paths.rs  process.rs  terminal.rs  window.rs
lib/tests/: mux_smoke.rs  orchestrator_git.rs  pane_smoke.rs  reservations.rs
src/: acks.rs  app.rs  conversation.rs  focus.rs  live_view.rs  main.rs  models.rs  platform.rs  scanner.rs  send.rs  spawn.rs  ui.rs  usage.rs
src/platform/: mod.rs  process.rs  terminal.rs  window.rs
