[package]
name = "cc-hub"
version = "0.9.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
libc = "0.2"
log = "0.4"
simplelog = "0.12"
notify = "8"
notify-debouncer-mini = "0.6"
tui-term = { version = "0.3", features = ["unstable"] }
portable-pty = "0.9"
vt100 = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
