[package]
name = "cc-hub-lib"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
hot-reload = []

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
chrono.workspace = true
log.workspace = true
simplelog.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
notify = "8"
notify-debouncer-mini = "0.6"
tui-term = { version = "0.3", features = ["unstable"] }
portable-pty = "0.9"
vt100 = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }
